# Soft-Computing-Techniques

./: .gitignore  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTORS.md  README.md  bag [ ROS data ].docx  pyproject.toml  run_simlation.m
.github/workflows/: python-app.yml  python-publish.yml  slsa-generic-generator.yml
docs/: experimental_results.md  fuzzy_logic.md  setup_guide.md
exp-2/tethered_robot_navigation/: CMakeLists.txt  package.xml
exp-2/tethered_robot_navigation/config/: ekf.yaml
exp-2/tethered_robot_navigation/launch/: start_localization.launch
exp-2/tethered_robot_navigation/rviz/: localization_demo.rviz
exp-2/tethered_robot_navigation/scripts/: bug_navigator.py  robot_simulator.py
exp-3/nav_experiment/: CMakeLists.txt  README.md  package.xml
exp-3/nav_experiment/launch/: run_navigation.launch  run_slam.launch
exp-3/nav_experiment/param/: base_local_planner_params.yaml  costmap_common_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml
exp-3/nav_experiment/rviz/: nav_config.rviz  slam_config.rviz
exp-3/nav_experiment/worlds/: lab_environment.world
exp_4/my_navigator/: CMakeLists.txt  README.md  package.xml
exp_4/my_navigator/launch/: check_system.launch  navigate.launch  navigate_direct.launch  test_make_plan.launch  test_muxer.launch  test_velocity.launch
exp_4/my_navigator/param/: costmap_common_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml  move_base_params_global_only.yaml
exp_4/my_navigator/scripts/: check_system.py  fuzzy_navigator.py  hybrid_navigator.py  hybrid_navigator_direct.py  hybrid_navigator_edited.py  test.py  test_make_plan.py  test_muxer.py  test_path_sampling.py  test_path_tracking.py  test_velocity_control.py
