<?xml version="1.0"?>
<package format="2">
  <name>my_navigator</name>
  <version>0.1.0</version>
  <description>A ROS package to demonstrate hybrid navigation using A* global planning with reactive local obstacle avoidance (Bug and Fuzzy Logic algorithms).</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <maintainer email="your_name@email.com">Your Name</maintainer>

  <!-- One license tag required, multiple allowed, one license per tag -->
  <license>MIT</license>

  <!-- The buildtool_depend is almost always catkin -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Build, Export, and Execution Dependencies -->
  <!-- The <depend> tag is a shortcut for <build_depend>, <build_export_depend>, and <exec_depend> -->
  <!-- These are the core dependencies for our Python scripts -->
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>actionlib</depend>
  <depend>move_base_msgs</depend>
  <depend>std_srvs</depend>

  <!-- Execution-only Dependencies -->
  <!-- These packages are only needed when we run our launch file, not to build the code. -->
  <exec_depend>turtlebot3_gazebo</exec_depend>
  <exec_depend>turtlebot3_navigation</exec_depend>
  <exec_depend>rviz</exec_depend>
  <exec_depend>move_base</exec_depend>
  <exec_depend>topic_tools</exec_depend>

</package>